duniverse/menhirLib.20200211/test/static/bad/new-syntax-parentheses.mly
%token A B C
%start<unit> main

%%

let main :=
  A; (B | C)
     (* Error: a choice cannot be parenthesized like this. *)
