duniverse/menhirLib.20200211/test/static/bad/new-syntax-parentheses.exp
File "new-syntax-parentheses.mly", line 7, characters 6-7:
Error: syntax error after '(' and before 'B'.
This opening parenthesis seems to be the beginning of a tuple pattern.
Thus, a comma-separated list of patterns is expected at this point.
